// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSharpGenerator class renderer should be able to overwrite accessor preset hook 1`] = `
"public partial class CustomClass
{
  private string? property;
  private Dictionary<string, string>? additionalProperties;

  my own custom factory

  my own custom factory
}"
`;

exports[`CSharpGenerator class renderer should be able to overwrite property preset hook 1`] = `
"public partial class CustomClass
{
  my own property
  my own property

  public string? Property 
  {
    get { return property; }
    set { this.property = value; }
  }

  public Dictionary<string, string>? AdditionalProperties 
  {
    get { return additionalProperties; }
    set { this.additionalProperties = value; }
  }
}"
`;

exports[`CSharpGenerator class renderer should generate a const string 1`] = `
"public partial class CustomClass
{
  private const string property = \\"test\\";
  private Dictionary<string, string>? additionalProperties;

  public string Property 
  {
    get { return property; }
  }

  public Dictionary<string, string>? AdditionalProperties 
  {
    get { return additionalProperties; }
    set { this.additionalProperties = value; }
  }
}"
`;

exports[`CSharpGenerator should generate a const string in record 1`] = `
"public partial record Address
{
  public const string Property = \\"test\\";
  public Dictionary<string, string>? AdditionalProperties { get; init; }
}"
`;

exports[`CSharpGenerator should render \`class\` type 1`] = `
"public partial class Address
{
  private string streetName;
  private string city;
  private string state;
  private double houseNumber;
  private bool? marriage;
  private dynamic? members;
  private dynamic[]? tupleType;
  private string[] arrayType;
  private Dictionary<string, dynamic>? additionalProperties;

  public string StreetName 
  {
    get { return streetName; }
    set { this.streetName = value; }
  }

  public string City 
  {
    get { return city; }
    set { this.city = value; }
  }

  public string State 
  {
    get { return state; }
    set { this.state = value; }
  }

  public double HouseNumber 
  {
    get { return houseNumber; }
    set { this.houseNumber = value; }
  }

  public bool? Marriage 
  {
    get { return marriage; }
    set { this.marriage = value; }
  }

  public dynamic? Members 
  {
    get { return members; }
    set { this.members = value; }
  }

  public dynamic[]? TupleType 
  {
    get { return tupleType; }
    set { this.tupleType = value; }
  }

  public string[] ArrayType 
  {
    get { return arrayType; }
    set { this.arrayType = value; }
  }

  public Dictionary<string, dynamic>? AdditionalProperties 
  {
    get { return additionalProperties; }
    set { this.additionalProperties = value; }
  }
}"
`;

exports[`CSharpGenerator should render \`enum\` type 1`] = `
"public enum Things
{
  TEXAS,
  NUMBER_1,
  RESERVED_NUMBER_1,
  RESERVED_FALSE,
  CURLYLEFT_QUOTATION_TEST_QUOTATION_COLON_QUOTATION_TEST_QUOTATION_CURLYRIGHT
}

public static class ThingsExtensions
{
  public static dynamic? GetValue(this Things enumValue)
  {
    switch (enumValue)
    {
      case Things.TEXAS: return \\"Texas\\";
      case Things.NUMBER_1: return \\"1\\";
      case Things.RESERVED_NUMBER_1: return 1;
      case Things.RESERVED_FALSE: return false;
      case Things.CURLYLEFT_QUOTATION_TEST_QUOTATION_COLON_QUOTATION_TEST_QUOTATION_CURLYRIGHT: return \\"{\\\\\\"test\\\\\\":\\\\\\"test\\\\\\"}\\";
    }
    return null;
  }

  public static Things? ToThings(dynamic? value)
  {
    switch (value)
    {
      case \\"Texas\\": return Things.TEXAS;
      case \\"1\\": return Things.NUMBER_1;
      case 1: return Things.RESERVED_NUMBER_1;
      case false: return Things.RESERVED_FALSE;
      case \\"{\\\\\\"test\\\\\\":\\\\\\"test\\\\\\"}\\": return Things.CURLYLEFT_QUOTATION_TEST_QUOTATION_COLON_QUOTATION_TEST_QUOTATION_CURLYRIGHT;
    }
    return null;
  }
}
"
`;

exports[`CSharpGenerator should render \`record\` type if chosen 1`] = `
"public partial record Address
{
  public required string StreetName { get; init; }
  public required string City { get; init; }
  public required string State { get; init; }
  public required double HouseNumber { get; init; }
  public bool? Marriage { get; init; }
  public dynamic? Members { get; init; }
  public dynamic[]? TupleType { get; init; }
  public required string[] ArrayType { get; init; }
  public Dictionary<string, dynamic>? AdditionalProperties { get; init; }
}"
`;

exports[`CSharpGenerator should render enums with translated special characters 1`] = `
"public enum States
{
  TEST_PLUS,
  TEST,
  TEST_MINUS,
  TEST_QUESTION_EXCLAMATION,
  ASTERISK_TEST
}

public static class StatesExtensions
{
  public static string? GetValue(this States enumValue)
  {
    switch (enumValue)
    {
      case States.TEST_PLUS: return \\"test+\\";
      case States.TEST: return \\"test\\";
      case States.TEST_MINUS: return \\"test-\\";
      case States.TEST_QUESTION_EXCLAMATION: return \\"test?!\\";
      case States.ASTERISK_TEST: return \\"*test\\";
    }
    return null;
  }

  public static States? ToStates(string? value)
  {
    switch (value)
    {
      case \\"test+\\": return States.TEST_PLUS;
      case \\"test\\": return States.TEST;
      case \\"test-\\": return States.TEST_MINUS;
      case \\"test?!\\": return States.TEST_QUESTION_EXCLAMATION;
      case \\"*test\\": return States.ASTERISK_TEST;
    }
    return null;
  }
}
"
`;

exports[`CSharpGenerator should render models and their dependencies 1`] = `
"namespace Test.Namespace
{
  using System.Collections.Generic;

  public partial class Address
  {
    private string streetName;
    private string city;
    private string state;
    private double houseNumber;
    private bool? marriage;
    private dynamic? members;
    private dynamic[] arrayType;
    private OtherModel? otherModel;
    private Dictionary<string, dynamic>? additionalProperties;

    public string StreetName 
    {
      get { return streetName; }
      set { this.streetName = value; }
    }

    public string City 
    {
      get { return city; }
      set { this.city = value; }
    }

    public string State 
    {
      get { return state; }
      set { this.state = value; }
    }

    public double HouseNumber 
    {
      get { return houseNumber; }
      set { this.houseNumber = value; }
    }

    public bool? Marriage 
    {
      get { return marriage; }
      set { this.marriage = value; }
    }

    public dynamic? Members 
    {
      get { return members; }
      set { this.members = value; }
    }

    public dynamic[] ArrayType 
    {
      get { return arrayType; }
      set { this.arrayType = value; }
    }

    public OtherModel? OtherModel 
    {
      get { return otherModel; }
      set { this.otherModel = value; }
    }

    public Dictionary<string, dynamic>? AdditionalProperties 
    {
      get { return additionalProperties; }
      set { this.additionalProperties = value; }
    }
  }
}"
`;

exports[`CSharpGenerator should render models and their dependencies 2`] = `
"namespace Test.Namespace
{
  using System.Collections.Generic;

  public partial class OtherModel
  {
    private string? streetName;
    private Dictionary<string, dynamic>? additionalProperties;

    public string? StreetName 
    {
      get { return streetName; }
      set { this.streetName = value; }
    }

    public Dictionary<string, dynamic>? AdditionalProperties 
    {
      get { return additionalProperties; }
      set { this.additionalProperties = value; }
    }
  }
}"
`;

exports[`CSharpGenerator should render null-forgiving operator if handleNullable is chosen 1`] = `
"public partial class Address
{
  private string streetName = null!;
  private string city = null!;
  private string state = null!;
  private double houseNumber;
  private bool? marriage;
  private HouseType houseType;
  private TerraceType? terraceType;
  private dynamic? members;
  private dynamic[]? tupleType;
  private string[] arrayType = null!;
  private Dictionary<string, dynamic>? additionalProperties;

  public string StreetName 
  {
    get { return streetName; }
    set { this.streetName = value; }
  }

  public string City 
  {
    get { return city; }
    set { this.city = value; }
  }

  public string State 
  {
    get { return state; }
    set { this.state = value; }
  }

  public double HouseNumber 
  {
    get { return houseNumber; }
    set { this.houseNumber = value; }
  }

  public bool? Marriage 
  {
    get { return marriage; }
    set { this.marriage = value; }
  }

  public HouseType HouseType 
  {
    get { return houseType; }
    set { this.houseType = value; }
  }

  public TerraceType? TerraceType 
  {
    get { return terraceType; }
    set { this.terraceType = value; }
  }

  public dynamic? Members 
  {
    get { return members; }
    set { this.members = value; }
  }

  public dynamic[]? TupleType 
  {
    get { return tupleType; }
    set { this.tupleType = value; }
  }

  public string[] ArrayType 
  {
    get { return arrayType; }
    set { this.arrayType = value; }
  }

  public Dictionary<string, dynamic>? AdditionalProperties 
  {
    get { return additionalProperties; }
    set { this.additionalProperties = value; }
  }
}"
`;
